_build/CrispASR/include/crispasr_session.h

struct crispasr_align_result;
typedef struct crispasr_align_result crispasr_align_result;
struct crispasr_session;
typedef struct crispasr_session crispasr_session;
struct crispasr_session_result;
typedef struct crispasr_session_result crispasr_session_result;
struct crispasr_vad_abi_opts;
typedef struct crispasr_vad_abi_opts crispasr_vad_abi_opts;
CRISPASR_SESSION_API int crispasr_vad_segments(const char* vad_model_path, const float* pcm, int n_samples,
                                               int sample_rate, float threshold, int min_speech_ms, int min_silence_ms,
                                               int n_threads, bool use_gpu, float** out_spans);
CRISPASR_SESSION_API void crispasr_vad_free(float* spans);
CRISPASR_SESSION_API float crispasr_watermark_detect(const float* pcm, int n_samples);
CRISPASR_SESSION_API void crispasr_watermark_embed(float* pcm, int n_samples, float alpha);
CRISPASR_SESSION_API crispasr_session_result* crispasr_session_transcribe_lang(crispasr_session* s, const float* pcm,
                                                                               int n_samples, const char* language);
CRISPASR_SESSION_API crispasr_session_result* crispasr_session_transcribe(crispasr_session* s, const float* pcm,
                                                                          int n_samples);
// 0.8.7+: chunked-encode transcribe (issue #208). Forces the Parakeet
// backend through its bounded long-form path (overlapping short-window
// transcribe-and-merge for non-JA models, streamed encoder for the JA-only
// model) regardless of audio length, so long files transcribe in bounded
// time AND recover the sections a single full-length pass drops.
// `chunk_seconds <= 0` keeps the per-model defaults; otherwise it sets the
// non-JA window length / the JA streamed window. `overlap_seconds < 0`
// uses the default. For non-Parakeet backends the chunk params are inert
// and this behaves exactly like crispasr_session_transcribe[_lang].
CRISPASR_SESSION_API crispasr_session_result* crispasr_session_transcribe_chunked_lang(
    crispasr_session* s, const float* pcm, int n_samples, int chunk_seconds, int overlap_seconds, const char* language);
CRISPASR_SESSION_API crispasr_session_result* crispasr_session_transcribe_chunked(crispasr_session* s, const float* pcm,
                                                                                  int n_samples, int chunk_seconds,
                                                                                  int overlap_seconds);
CRISPASR_SESSION_API crispasr_session_result* crispasr_session_transcribe_vad_lang(
    crispasr_session* s, const float* pcm, int n_samples, int sample_rate, const char* vad_model_path,
    const crispasr_vad_abi_opts* opts_or_null, const char* language);
CRISPASR_SESSION_API crispasr_session_result* crispasr_session_transcribe_vad(
    crispasr_session* s, const float* pcm, int n_samples, int sample_rate, const char* vad_model_path,
    const crispasr_vad_abi_opts* opts_or_null);
CRISPASR_SESSION_API int crispasr_detect_language_pcm(const float* samples, int32_t n_samples, int32_t method,
                                                      const char* model_path, int32_t n_threads, int32_t use_gpu,
                                                      int32_t gpu_device, int32_t flash_attn, char* out_lang_buf,
                                                      int32_t out_lang_cap, float* out_confidence);
CRISPASR_SESSION_API crispasr_align_result* crispasr_align_words_abi(const char* aligner_model, const char* transcript,
                                                                     const float* samples, int32_t n_samples,
                                                                     int64_t t_offset_cs, int32_t n_threads);
CRISPASR_SESSION_API int crispasr_align_result_n_words(crispasr_align_result* r);
CRISPASR_SESSION_API const char* crispasr_align_result_word_text(crispasr_align_result* r, int i);
CRISPASR_SESSION_API int64_t crispasr_align_result_word_t0(crispasr_align_result* r, int i);
CRISPASR_SESSION_API int64_t crispasr_align_result_word_t1(crispasr_align_result* r, int i);
CRISPASR_SESSION_API void crispasr_align_result_free(crispasr_align_result* r);
CRISPASR_SESSION_API int crispasr_session_result_n_segments(crispasr_session_result* r);
CRISPASR_SESSION_API const char* crispasr_session_result_segment_text(crispasr_session_result* r, int i);
CRISPASR_SESSION_API int64_t crispasr_session_result_segment_t0(crispasr_session_result* r, int i);
CRISPASR_SESSION_API int64_t crispasr_session_result_segment_t1(crispasr_session_result* r, int i);
// #300: native per-segment speaker label from a backend that diarizes on its
// own — the "(Speaker N) " form (with the trailing space, as the CLI prefixes
// it), or "" when the backend produced none. Never NULL, so a caller can print
// it unconditionally. Populated today by vibevoice, whose model answers with a
// Start/End/Speaker/Content array; other backends leave it empty. The ordinals
// are CHUNK-LOCAL: "Speaker 1" in one transcribe call is not guaranteed to be
// the same voice as "Speaker 1" in the next, since no cross-chunk clustering
// runs here (use crispasr_diarize_* for that).
CRISPASR_SESSION_API const char* crispasr_session_result_segment_speaker(crispasr_session_result* r, int i);
CRISPASR_SESSION_API int crispasr_session_result_n_words(crispasr_session_result* r, int i_seg);
CRISPASR_SESSION_API const char* crispasr_session_result_word_text(crispasr_session_result* r, int i_seg, int i_word);
CRISPASR_SESSION_API int64_t crispasr_session_result_word_t0(crispasr_session_result* r, int i_seg, int i_word);
CRISPASR_SESSION_API int64_t crispasr_session_result_word_t1(crispasr_session_result* r, int i_seg, int i_word);
CRISPASR_SESSION_API float crispasr_session_result_word_p(crispasr_session_result* r, int i_seg, int i_word);
// Whisper's per-segment no-speech probability (the <|nospeech|> token
// posterior) in [0, 1]. Only the whisper backend populates it; other backends
// and out-of-range indices return the -1.0 sentinel ("no data").
CRISPASR_SESSION_API float crispasr_session_result_segment_no_speech_prob(crispasr_session_result* r, int i_seg);
// Per-frame CTC logits (opted in via crispasr_session_set_return_logits) for
// backends that produce a dense CTC grid (Omni CTC, wav2vec2/hubert/data2vec,
// canary-ctc). Frame-major: logits[t * n_logit_vocab + v]. Raw pre-softmax for
// Omni & wav2vec2; log-probabilities for canary-ctc. _logits returns NULL when
// none captured.
CRISPASR_SESSION_API int crispasr_session_result_n_logit_frames(crispasr_session_result* r);
CRISPASR_SESSION_API int crispasr_session_result_n_logit_vocab(crispasr_session_result* r);
CRISPASR_SESSION_API const float* crispasr_session_result_logits(crispasr_session_result* r);
CRISPASR_SESSION_API int crispasr_session_result_word_n_alts(crispasr_session_result* r, int i_seg, int i_word);
CRISPASR_SESSION_API const char* crispasr_session_result_word_alt_text(crispasr_session_result* r, int i_seg,
                                                                       int i_word, int i_alt);
CRISPASR_SESSION_API float crispasr_session_result_word_alt_p(crispasr_session_result* r, int i_seg, int i_word,
                                                              int i_alt);
CRISPASR_SESSION_API void crispasr_session_result_free(crispasr_session_result* r);
// UNMARKED synthesis — hard-refused unless crispasr_session_accept_marking_responsibility() was called first.
CRISPASR_SESSION_API float* crispasr_session_synthesize_raw(crispasr_session* s, const char* text, int* out_n_samples);
// Attest acceptance of AI-content marking/disclosure duty (required for _raw); recorded for audit.
CRISPASR_SESSION_API int crispasr_session_accept_marking_responsibility(crispasr_session* s, const char* attestation);
CRISPASR_SESSION_API void crispasr_pcm_free(float* pcm);
CRISPASR_SESSION_API float* crispasr_session_speech_to_speech(crispasr_session* s, const float* in_samples,
                                                              int n_in_samples, char** out_text, int* out_n_samples);
CRISPASR_SESSION_API void crispasr_session_translate_text_free(char* text);
CRISPASR_SESSION_API int crispasr_session_set_return_logits(crispasr_session* s, int enable);
CRISPASR_SESSION_API int crispasr_session_detect_language(crispasr_session* s, const float* pcm, int n_samples,
                                                          const char* lid_model_path, int method, char* out_lang,
                                                          int out_lang_cap, float* out_prob);