_build/CrispASR/include/crispasr.h

struct crispasr_session;
// Sample rate the backend expects for input PCM. Use with
// crispasr_audio_load_at_rate to load audio at the model's native rate,
// avoiding a lossy down-then-up resample. Returns 16000 for Whisper-family
// backends and 0 on error.
CRISPASR_API int crispasr_session_input_sample_rate(struct crispasr_session* s);