_build/CrispASR/bindings/csharp/CrispASR/NativeMethods.cs


        // UNMARKED synthesis — hard-refused unless accept_marking_responsibility was called first.
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_synthesize_raw(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
            out int outNSamples);

        // Attest acceptance of AI-content marking/disclosure duty (EU AI Act Art. 50).
        // Whose voice a PRESET voice is (EU AI Act Art. 50(4)). 0 ok, -1 bad
        // session, -2 unrecognised value.
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_speaker_identity(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string identity);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_accept_marking_responsibility(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string attestation);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_pcm_free(IntPtr pcm);

        // Speech-to-speech — audio in → audio out via a single model pass
        // (lfm2-audio, mini-omni2, sidon, voxcpm2-vae). Returns malloc'd float32
        // PCM (free via crispasr_pcm_free); outText, when non-null, receives the
        // intermediate transcript (malloc'd, free via
        // crispasr_session_translate_text_free).
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_speech_to_speech(
            IntPtr s, float[] inSamples, int nInSamples,
            out IntPtr outText, out int outNSamples);

        // Sample rate the backend expects for input PCM (16000 for
        // Whisper-family backends, 0 on error).
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_input_sample_rate(IntPtr s);

        // #332: output-side counterparts. output_sample_rate is the rate of
        // the PCM synthesize / speech_to_speech return (0 = no audio output);
        // the channel getters are 1 (mono) for every current backend.
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_output_sample_rate(IntPtr s);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_input_channels(IntPtr s);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_output_channels(IntPtr s);

        // AI-content marking (EU AI Act Art. 50(2)) — the other half of
        // synthesize_raw. alpha <= 0 selects the reliably detectable default.
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_watermark_embed(float[] pcm, int nSamples, float alpha);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern float crispasr_watermark_detect(float[] pcm, int nSamples);

        // ---- ASR transcription ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_transcribe(
            IntPtr s, float[] pcm, int nSamples);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_transcribe_lang(
            IntPtr s, float[] pcm, int nSamples,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string? language);

        // Chunked-encode transcribe (issue #208): forces the Parakeet backend
        // through its bounded overlapping-window long-form path. chunkSeconds<=0
        // keeps the per-model default window; overlapSeconds<0 keeps the default
        // overlap. Inert (== transcribe[_lang]) on non-Parakeet backends.
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_transcribe_chunked(
            IntPtr s, float[] pcm, int nSamples, int chunkSeconds, int overlapSeconds);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_transcribe_chunked_lang(
            IntPtr s, float[] pcm, int nSamples, int chunkSeconds, int overlapSeconds,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string? language);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_transcribe_vad(
            IntPtr s, float[] pcm, int nSamples, int sampleRate,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string vadModelPath,
            IntPtr optsOrNull);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_transcribe_vad_lang(
            IntPtr s, float[] pcm, int nSamples, int sampleRate,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string vadModelPath,
            IntPtr optsOrNull,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string? language);

        // ---- Result accessors ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_result_n_segments(IntPtr result);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_result_segment_text(IntPtr result, int i);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern long crispasr_session_result_segment_t0(IntPtr result, int i);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern long crispasr_session_result_segment_t1(IntPtr result, int i);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_result_n_words(IntPtr result, int iSeg);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_result_word_text(IntPtr result, int iSeg, int iWord);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern long crispasr_session_result_word_t0(IntPtr result, int iSeg, int iWord);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern long crispasr_session_result_word_t1(IntPtr result, int iSeg, int iWord);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern float crispasr_session_result_word_p(IntPtr result, int iSeg, int iWord);

        // Whisper's per-segment no-speech probability in [0, 1]; -1.0 sentinel
        // ("no data") for other backends and out-of-range indices.
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern float crispasr_session_result_segment_no_speech_prob(IntPtr result, int iSeg);

        // #300: native per-segment speaker label ("(Speaker N) "), or "" when the
        // backend does not diarize natively. Never NULL. Returned as IntPtr and
        // marshalled via PtrToUtf8 like the other const char* getters — a
        // [return: MarshalAs(LPUTF8Str)] would make the CLR try to free it.
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_result_segment_speaker(IntPtr result, int i);

        // Per-frame CTC logits (opted in via crispasr_session_set_return_logits)
        // for backends with a dense CTC grid (Omni CTC, wav2vec2/hubert/data2vec,
        // canary-ctc). _logits returns a const float* (frame-major;
        // logits[t * nVocab + v]) or NULL when none. Raw pre-softmax for Omni &
        // wav2vec2; log-probabilities for canary-ctc.
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_result_n_logit_frames(IntPtr result);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_result_n_logit_vocab(IntPtr result);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_result_logits(IntPtr result);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_result_word_n_alts(IntPtr result, int iSeg, int iWord);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_result_word_alt_text(IntPtr result, int iSeg, int iWord, int iAlt);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern float crispasr_session_result_word_alt_p(IntPtr result, int iSeg, int iWord, int iAlt);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_session_result_free(IntPtr result);

        // ---- Language detection ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_detect_language(
            IntPtr s, float[] pcm, int nSamples,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string lidModelPath,
            int method, byte[] outLang, int outLangCap, float[] outProb);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_detect_language_pcm(
            float[] samples, int nSamples, int method,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string modelPath,
            int nThreads, int useGpu, int gpuDevice, int flashAttn,
            byte[] outLang, int outLangCap, float[] outProb);

        // ---- Alignment ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_align_words_abi(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string alignerModel,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string transcript,
            float[] samples, int nSamples, long tOffsetCs, int nThreads);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_align_result_n_words(IntPtr result);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_align_result_word_text(IntPtr result, int i);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern long crispasr_align_result_word_t0(IntPtr result, int i);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern long crispasr_align_result_word_t1(IntPtr result, int i);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_align_result_free(IntPtr result);

        // ---- VAD ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_vad_segments(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string vadModelPath,
            float[] pcm, int nSamples, int sampleRate,
            float threshold, int minSpeechMs, int minSilenceMs,
            int nThreads, int useGpu, IntPtr[] outSpans);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_vad_free(IntPtr spans);
